Changed the base html to be less cluttered

--- a/AnswerQuest/static/css/styles.css
+++ b/AnswerQuest/static/css/styles.css
@@ -1,4 +1,5 @@
 body {
+	background-color: #f0f0f0;
 	font-weight: 15px;
 	margin: 0 auto;
 }
@@ -11,6 +12,12 @@ body {
 .avatar {
 	width: 175px;
 	height: 200px;
+}
+
+.avatar-icon {
+	width: 60px;
+	height: 80px;
+	border-radius: 10px;
 }
 
 .page-header {
@@ -69,7 +76,6 @@ body {
 	font-family: Dosis;
 	font-size: 40px;
 	font-weight: 500;
-	margin: 0;
 }
 
 .question-title {
@@ -213,12 +219,37 @@ body {
 
 .navbar-list {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
+	font-size: 40px;
 }
 
 .navbar {
-	background-color: #65b5f1;
+	border-bottom: 1px #c8c8c8 solid;
+	margin-top: .7rem;
+	background-color: linear-gradient(rgb(255, 255, 255), rgb(112, 112, 112));
+}
+
+.ask-question {
 	border-radius: 10px;
+	height: 75px;
+	font-size: 28px;
+	padding: .75rem;
+}
+
+.ask-question:hover {
+	text-decoration: none;
+}
+
+.user-info {
+	font-size: 18px;
+}
+
+.logout {
+	margin-left: .5rem;
+}
+
+.sign-in {
+	font-size: 18px;
 }
 
 .pose-question-header {
