--- a/AnswerQuest/templates/AnswerQuest/pose_question.html
+++ b/AnswerQuest/templates/AnswerQuest/pose_question.html
@@ -4,7 +4,7 @@
 
 <div class='pose-question-container'>
 
-    <a href="{% url 'home' %}">Return Home, {{ user }}</a>
+    <a href="{% url 'home' %}" class="what">Return Home, {{ user }}</a>
 
     <div class='pose-question-header'>
         <h2>Pose Your Question, Questor!</h2>
@@ -12,7 +12,10 @@
 
     <form action='' method='POST'>
         {% csrf_token %}
-        {{ form }}
+        <label for="title">Title</label>
+        {{ form.title }}
+        <label for="body">Body</label>
+        {{ form.body }}
         <button type='submit'>Pose Question</button>
     </form>
 
