--- a/AnswerQuest/templates/AnswerQuest/profile.html
+++ b/AnswerQuest/templates/AnswerQuest/profile.html
@@ -23,12 +23,37 @@
   <div>
     Email 
   </div> -->
-  <div>
-    Questions
-    {{ user.quests.all }}
+  <div class="show-questions">
+    Your Questions:
+    {% for question in user.quests.all %}
+
+        <div class="question-box">
+    
+          <div class="question">
+            <!-- The author link should go to the authors page -->
+            <a href="{% url 'question' pk=question.pk %}" class="author-link">{{ question.title}}</a>
+          </div>
+    
+          <div class="question-info-container">
+            <!-- If the question is solved -->
+            {% if question.is_solved %}
+            <p>Solved</p>
+            {% else %}
+            <p>Not Solved</p>
+            {% endif %}
+            <a href="">{{ question.author }}</a>
+            <!-- The Favoirting star -->
+            <a data-questionpk="{{ question.pk }}" data-type="question"
+              class="question-favorite">{% if question in request.user.starred_questions.all %}&#9733{% else %}&#9734{% endif %}</a>
+          </div>
+        </div>
+      {% endfor %}
+
   </div>
+  <!-- <div>
     Starred Questions
-    {{ user.starred_questions.all }}
+    {{ user.starred_questions.title.all }}
+    </div>div>
   <div>
     Answers
     {{ user.responses.all }}
@@ -36,7 +61,6 @@
   <div>
     Starred Answers
     {{ user.starred_answers.all }}
-  </div>
-
+  </div> -->
 
 {% endblock %}
