Were adjusting the view to see if the information would be able to used using Ajax

--- a/AnswerQuest/templates/AnswerQuest/base.html
+++ b/AnswerQuest/templates/AnswerQuest/base.html
@@ -35,7 +35,13 @@
           <a class="sign-in" href="{% url 'auth_login' %}">Sign In / Register</a>
           {% endif %}
         </ul>
-    </div>
+      </div>
+      <!-- <div class="upper_right">
+        <div>
+          AnswerQuest Leaderboard
+        </div>
+      </div>  -->
+      
     {% block content %}
     {% endblock %}
   </div>
