--- a/AnswerQuest/templates/AnswerQuest/home.html
+++ b/AnswerQuest/templates/AnswerQuest/home.html
@@ -1,17 +1,14 @@
 {% extends "AnswerQuest/base.html" %}
+
 {% load markdownify %}
 
 {% block content %}
-
-  <div class="ask-question-home">
-      <a class="ask-question-button" href="{% url 'pose_question' %}">Ask a Question</a>
-  </div>
 
   {% if questions.count %}
 
   <!-- <h3 class="here-you-are">Here are your questions, {{ request.user}}!</h3> -->
   <div class="browse">
-
+    
     {% for question in questions.all %}
 
     <div class="question-container-home">
@@ -25,7 +22,9 @@
                 <div class="question-head-top-left-home">
                   
                   <p class="q-logo-home">Q</p>
+                  <a href="{% url 'question' pk=question.pk %}">
                   <p class="question-title-home">: {{ question.title }}</p>
+                  </a>
 
                 </div>
 
@@ -39,7 +38,7 @@
               </div>
 
               <div class="question-head-bottom-home">
-                  <a class="question-author" href=''>{{ question.author }}</a>
+                  <a class="question-author" href="{% url 'profile' %}">{{ question.author }}</a>
               </div>
 
           </div>
@@ -47,32 +46,15 @@
         </div>
 
     </div>
-
-    <!-- <div class="question-box"> -->
-
-      <!-- <div class="question"> -->
-        <!-- The author link should go to the authors page -->
-        <!-- <a href="{% url 'question' pk=question.pk %}" class="author-link">{{ question.title}}</a>
-      </div> -->
-
-      <!-- <div class="question-info-container"> -->
-        <!-- If the question is solved -->
-        <!-- {% if question.is_solved %}
-        <p>Solved</p>
-        {% else %}
-        <p>Not Solved</p>
-        {% endif %}
-        <a href="">{{ question.author }}</a> -->
-        <!-- The Favoirting star -->
-        <!-- <a data-questionpk="{{ question.pk }}" data-type="question"
-          class="question-favorite">{% if question in request.user.starred_questions.all %}&#9733{% else %}&#9734{% endif %}</a>
-      </div>
-
-    </div> -->
   {% endfor %}
   </div>
   {% else %}
   <h3>You have no questions yet. Would you like to <a href="{% url 'pose_question' %}">ask</a> one</h3>
   {% endif %}
+
+  <script>
+  
+  
+  </script>
 
 {% endblock %}
