--- a/AnswerQuest/static/css/styles.css
+++ b/AnswerQuest/static/css/styles.css
@@ -15,9 +15,10 @@ body {
 }
 
 .avatar-icon {
-	width: 60px;
+	width: 80px;
 	height: 80px;
 	border-radius: 10px;
+	object-fit: cover;
 }
 
 .page-header {
@@ -345,4 +346,45 @@ button {
 
 .solution {
 	order: 1;
+}
+
+.profile-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin-top: 20px;
+}
+
+.show-questions {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 70%;
+}
+
+.browse-profile {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+}
+
+.question-container-profile {
+	display: flex;
+	flex-direction: column;
+	align-items: left;
+	margin: 30px auto;
+	width: 40%;
+	color: #525252;
+}
+
+.profile-section {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	text-align: right;
+	width: 30%;
+}
+
+.profile-form {
+	width: 90%;
 }
