--- a/AnswerQuest/templates/AnswerQuest/profile.html
+++ b/AnswerQuest/templates/AnswerQuest/profile.html
@@ -2,15 +2,70 @@
 
 {% block content %}
 
-  <div>
-  <form action="" method="POST" enctype="multipart/form-data">
-  {% csrf_token %}
+<div class="profile-container">
+
+    <div class="show-questions">
+    
+        Your Questions:
+    
+        <div class="browse-profile">
+        
+        {% for question in user.quests.all %}
+    
+        <div class="question-container-profile">
+    
+          <div class="question-text-container-home">
+    
+              <div class="question-title-container-home">
+    
+                  <div class="question-head-top-home">
+    
+                    <div class="question-head-top-left-home">
+                      
+                      <p class="q-logo-home">Q</p>
+                      <a href="{% url 'question' pk=question.pk %}">
+                      <p class="question-title-home">: {{ question.title }}</p>
+                      </a>
+    
+                    </div>
+    
+                    <div class="question-head-top-right-home">
+    
+                      <a data-questionpk="{{ question.pk }}" data-type="question"
+                      class="question-favorite">{% if question in request.user.starred_questions.all %}&#9733{% else %}&#9734{% endif %}</a>
+    
+                    </div>
+    
+                  </div>
+    
+                  <div class="question-head-bottom-home">
+                      <a class="question-author" href="{% url 'profile' %}">{{ question.author }}</a>
+                  </div>
+    
+              </div>
+    
+            </div>
+    
+        </div>
+    
+        {% endfor %}
+    
+      </div>
+    
+      </div>
+
+  <div class="profile-section">
   
-  {{ form.as_p }}
+    <form action="" method="POST" enctype="multipart/form-data" class="profile-form">
+      {% csrf_token %}
+  
+      {{ form.as_p }}
   
     <button class="button" type='submit'>Update profile</button>
+  
+    </form>
+    
   </div>
-  </form>
   <!-- <div>
     Avatar
   </div>
@@ -23,33 +78,6 @@
   <div>
     Email 
   </div> -->
-  <div class="show-questions">
-    Your Questions:
-    {% for question in user.quests.all %}
-
-        <div class="question-box">
-    
-          <div class="question">
-            <!-- The author link should go to the authors page -->
-            <a href="{% url 'question' pk=question.pk %}" class="author-link">{{ question.title}}</a>
-          </div>
-    
-          <div class="question-info-container">
-            <!-- If the question is solved -->
-            {% if question.is_solved %}
-            <p>Solved</p>
-            {% else %}
-            <p>Not Solved</p>
-            {% endif %}
-            <a href="">{{ question.author }}</a>
-            <!-- The Favoirting star -->
-            <a data-questionpk="{{ question.pk }}" data-type="question"
-              class="question-favorite">{% if question in request.user.starred_questions.all %}&#9733{% else %}&#9734{% endif %}</a>
-          </div>
-        </div>
-      {% endfor %}
-
-  </div>
   <!-- <div>
     Starred Questions
     {{ user.starred_questions.title.all }}
@@ -62,5 +90,7 @@
     Starred Answers
     {{ user.starred_answers.all }}
   </div> -->
+
+</div>
 
 {% endblock %}
